--- a/Ozon/gnome-shell/gnome-shell.css
+++ b/Ozon/gnome-shell/gnome-shell.css
@@ -1092,6 +1092,14 @@ StScrollBar StButton#hhandle:active {
 /* Dash */
 
 #dash {
+    background-gradient-direction: none;
+    background-gradient-start: transparent;
+    background-gradient-end: transparent;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+#dash.desktop {
     color: rgba(238,238,238,1.0);
     font-size: 10pt;
     padding: 4px 0;
@@ -1107,9 +1115,6 @@ StScrollBar StButton#hhandle:active {
     box-shadow: none;
     /**/
     transition-duration:300ms;
-}
-#dash:overview{
-	background-color:rgba(0,0,0,0);
 }
 
 #dash:rtl {
