--- a/Ozon/gnome-shell/gnome-shell.css
+++ b/Ozon/gnome-shell/gnome-shell.css
@@ -1099,7 +1099,7 @@ StScrollBar StButton#hhandle:active {
     border-color: transparent;
 }
 
-#dash.desktop {
+#dash:desktop {
     color: rgba(238,238,238,1.0);
     font-size: 10pt;
     padding: 4px 0;
@@ -1107,7 +1107,7 @@ StScrollBar StButton#hhandle:active {
     background-color: rgba(49,55,54,1.0);
     border: 0px solid rgba(0,0,0,0);
     border-left: 0;
-    border-radius: 0 3px 3px 0;
+    border-radius: 3px 3px 0 0;
     /*dropshadow_true
     box-shadow: 0 0 5px 1px rgba(0,0,0,0.5);
     dropshadow_true*/
