--- a/Ozon/gnome-shell/gnome-shell.css
+++ b/Ozon/gnome-shell/gnome-shell.css
@@ -386,9 +386,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #555;
-    border-width: 1px;
-    border-color: #555;
+    background-color: rgba(0,0,0,0.25);
     font-weight: normal;
     transition-duration: 100ms;
 }
